Customizations for TUM Informatics

--- a/myconfig.sty
+++ b/myconfig.sty
@@ -1,19 +1,11 @@
 % This file defines all variables used by the first pages
 % Replace them with your personal details
 
-% In all cases: Please check your submission guidelines.
+% In all cases: Please check your submission guidelines:
+% http://www.in.tum.de/en/current-students/administrative-matters/thesis-guidelines-and-topics.html
 
 % Your full name
 \newcommand*{\myAuthor}{Max Mustermann}
-
-% Name of your univerty
-\newcommand*{\myUniversity}{Imaginary University}
-
-% Name of your department
-\newcommand*{\myDepartment}{Department of Informatics}
-
-% City of your univeristy
-\newcommand*{\myCity}{Dreamland}
 
 % The title of your thesis as denoted on the registration form
 % TIPP: ~ in LaTeX is a "protected whitespace" that prevents line breaks
