--- a/zyx/preface.tex
+++ b/zyx/preface.tex
@@ -9,6 +9,7 @@
 \newgeometry{bindingoffset=1.19cm} % This number is weird, but it centers the title page
 \begin{titlepage}
  \centering
+ \includegraphics[height=2.5cm]{./img/2015_Logo_TUM_CMYK.pdf}\\[1cm]
  {\LARGE \textsc{\myDepartment}}\\[0.8em]
  {\Large \textsc{\myUniversity}}
  \vfill
@@ -22,6 +23,7 @@
  {\Large \myAuthor}
  \vfill
  \vfill
+ \includegraphics[height=2.5cm]{./img/FAK_IN_CMYK.pdf}
  \cleardoublepage
 \end{titlepage}
 \restoregeometry
@@ -34,6 +36,7 @@
 %% Begin of the first page
 \thispagestyle{empty}
 \begin{center}
+ \includegraphics[height=2.5cm]{./img/2015_Logo_TUM_sw_CMYK.pdf}\\[0.8cm]
  {\LARGE \textsc{\myDepartment}}\\[0.8em]
  {\Large \textsc{\myUniversity}}
  \vfill
@@ -62,6 +65,7 @@
  \endgroup
  \vfill
  \vfill
+ \includegraphics[height=2.5cm]{./img/FAK_IN_sw_CMYK.pdf}
 \end{center}
 %% End of the first page
 \cleardoublepage
