--- a/myconfig.sty
+++ b/myconfig.sty
@@ -5,14 +5,14 @@
 % http://www.in.tum.de/en/current-students/administrative-matters/thesis-guidelines-and-topics.html
 
 % Your full name
-\newcommand*{\myAuthor}{Max Mustermann}
+\newcommand*{\myAuthor}{Jonas Hagg}
 
 % The title of your thesis as denoted on the registration form
 % TIPP: ~ in LaTeX is a "protected whitespace" that prevents line breaks
-\newcommand*{\myTitle}{Distributed Real-Time Java for~Cloud Based Applications}
+\newcommand*{\myTitle}{Multi-Party End-to-End Encryption for the Inverse Transparency Toolchain}
 
 % If the previous title is in English, you may provide a translation
-\newcommand*{\myTitleNative}{Verteiltes Echtzeit Java für Anwendungen in der Cloud}
+\newcommand*{\myTitleNative}{Mehrparteien-Ende-zu-Ende-Verschlüsselung für die Inverse-Transparenz-Toolchain}
 
 % Full type of your thesis - this will appear on the cover
 % Examples: Master's Thesis in Informatics, Bachelor's Thesis Information Systems, Guided Research
@@ -22,10 +22,10 @@
 \newcommand*{\myThesisTypeShort}{master's thesis}
 
 % The official start of your thesis as scheduled in the registration letter
-\newcommand*{\myStartDate}{June 24, 2016}
+\newcommand*{\myStartDate}{June 15, 2022}
 
 % The official end of your thesis as scheduled in the registration letter
-\newcommand*{\myEndDate}{December 24, 2016}
+\newcommand*{\myEndDate}{December 15, 2022}
 
 % Please adjust, if you hand in early
 % \newcommand*{\myHandIn}{December 23, 2016}
@@ -34,13 +34,10 @@
 % Use full name with all titles and degrees
 
 % Name of your main supervisor
-\newcommand*{\myReviewFirst}{Prof. Dr. Alpha}
+\newcommand*{\myReviewFirst}{Prof. Dr. Alexander Pretschner}
 
 % Name of your advisor - separate multiple advisors by \newline
-\newcommand*{\myAdvisor}{Beta \newline Gamma}
-
-% Name of your second supervisor from the master board, if you have one
-\newcommand*{\myReviewSecond}{Prof. Dr. Delta}
+\newcommand*{\myAdvisor}{Valentin Zieglmeier}
 
 % Path to your git-directory root - set to "." if you do not use git
 \newcommand*{\myGitRoot}{.}
