--- a/draft/master_thesis.bib
+++ b/draft/master_thesis.bib
@@ -1,4 +1,4 @@
-@Article{fabian2010comparison,
+@Article{Fabian2010,
   author    = {Fabian, Benjamin and G{\"u}rses, Seda and Heisel, Maritta and Santen, Thomas and Schmidt, Holger},
   journal   = {Requirements engineering},
   title     = {A comparison of security requirements engineering methods},
@@ -9,6 +9,50 @@
   groups    = {Requirements},
   publisher = {Springer},
   url       = {https://www.uni-due.de/imperia/md/content/swe/papers/2010a-comparison-of-security-requirements-engineering-methods.pdf},
+}
+
+@InProceedings{4384163,
+  author    = {Glinz, Martin},
+  booktitle = {15th IEEE International Requirements Engineering Conference (RE 2007)},
+  title     = {On Non-Functional Requirements},
+  year      = {2007},
+  pages     = {21-26},
+  doi       = {10.1109/RE.2007.45},
+  groups    = {Requirements},
+}
+
+@Misc{cryptoeprint:2022/449,
+  author       = {Britta Hale and Chelsea Komlo},
+  howpublished = {Cryptology ePrint Archive, Paper 2022/449},
+  note         = {\url{https://eprint.iacr.org/2022/449}},
+  title        = {On End-to-End Encryption},
+  year         = {2022},
+  groups       = {Requirements},
+  url          = {https://eprint.iacr.org/2022/449},
+}
+
+@Article{dolev1983security,
+  author    = {Dolev, Danny and Yao, Andrew},
+  journal   = {IEEE Transactions on information theory},
+  title     = {On the security of public key protocols},
+  year      = {1983},
+  number    = {2},
+  pages     = {198--208},
+  volume    = {29},
+  groups    = {Requirements},
+  publisher = {IEEE},
+}
+
+@Article{Mylopoulos1992,
+  author  = {Mylopoulos, J. and Chung, L. and Nixon, B.},
+  journal = {IEEE Transactions on Software Engineering},
+  title   = {Representing and using nonfunctional requirements: a process-oriented approach},
+  year    = {1992},
+  number  = {6},
+  pages   = {483-497},
+  volume  = {18},
+  doi     = {10.1109/32.142871},
+  groups  = {Requirements},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
