--- a/main.tex
+++ b/main.tex
@@ -15,16 +15,20 @@
 % \documentclass[twoside,wip]{./zyx/mythesis}
 
 % Add the library file for the literature references
-\addbibresource{./literature.bib}
+\addbibresource{./draft/master_thesis.bib}
 
 \begin{document}
 % Cover, abstract, table of contents, etc.
 \subfile{./zyx/preface.tex}
 
 % Put your chapters here
-\subfile{./txt/1-manual.tex}
-%% Add more chapters like this
-% \subfile{./txt/2-my-chapter.tex}
+\subfile{./txt/1-introduction.tex}
+\subfile{./txt/2-terms-and-defintions.tex}
+\subfile{./txt/3-requirements.tex}
+\subfile{./txt/4-survey-solutions.tex}
+\subfile{./txt/5-approach.tex}
+\subfile{./txt/6-evaluation.tex}
+\subfile{./txt/7-conclusion.tex}
 
 %% If you want to write in markdown, include it like this
 \putMD{./txt/42-example.md}
