--- a/txt/5-approach.tex
+++ b/txt/5-approach.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\chapter{User manual}
+\chapter{Approach}
 
 Indeed, another long manual for a tool \cite{Bithappens16Template} that aims for not requiring any guidance.
 However, it is highly recommended to read it thoroughly as it covers a lot of non-standard LaTeX features and helps you with getting the most out of this template.
