--- a/txt/0-abstract.tex
+++ b/txt/0-abstract.tex
@@ -4,7 +4,7 @@
 
 \chapter*{\myAbstractTitle}
 
-It is just a small template, that is hopefully helpful for writing your thesis.
+Itsssss is just a small template, that is hopefully helpful for writing your thesis.
 First, it gives a short introduction to its usage and the personalizations.
 Finally, it presents several examples of frequently used pieces of layout.
 
